<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/nouser_imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:contentDescription="Tupperman logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/nouser_textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/nouser_textViewDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/subtitle" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_login_existing_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_login_user"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/primary_text_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="32dp"
        android:textColor="@android:color/primary_text_light" />

    <Button
        android:id="@+id/button_register_new_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_register_user"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/primary_text_dark" />

</LinearLayout>
