<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:id="@+id/content_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:windowSoftInputMode="adjustResize"
        tools:context="layout.DetailFragment"
        tools:showIn="@layout/activity_edit_tupper">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="start"
            android:layout_row="0">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_uuid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/details_uuid"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="start"
            android:layout_row="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/details_name"
                android:inputType="textMultiLine" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_gravity="start"
            android:layout_row="2">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/details_description"
                android:inputType="textMultiLine" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="start"
            android:layout_row="3">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_freezeDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/calendar"
                android:drawableRight="@drawable/calendar"
                android:ems="10"
                android:hint="Date of freeze"
                android:inputType="textAutoComplete|date" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="start"
            android:layout_row="4">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_expiryDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableEnd="@drawable/calendar"
                android:drawableRight="@drawable/calendar"
                android:ems="10"
                android:hint="Date of expiration"
                android:inputType="textAutoComplete|date" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="start"
            android:layout_row="5">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/details_weight"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="start"
            android:layout_row="6">

            <!--<ch.tupperman.tupperman.foodGroupsChipView-->
                <!--android:id="@+id/editText_foodGroup"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:background="@drawable/token_background"-->
                <!--android:layout_column="0"-->
                <!--android:layout_row="6"-->
                <!--android:textColor="@android:color/white"-->
                <!--android:textSize="18sp" />-->

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_foodGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/details_foodGroups"
                android:inputType="" />

        </android.support.design.widget.TextInputLayout>

        <!--<com.kpbird.chipsedittextlibrary.ChipsMultiAutoCompleteTextview-->
        <!--android:id="@+id/chipsMultiAutoCompleteTextview1"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_column="0"-->
        <!--android:layout_gravity="left"-->
        <!--android:layout_row="13"-->
        <!--android:ems="10"-->
        <!--android:text="">-->

        <!--&lt;!&ndash;<requestFocus />&ndash;&gt;-->
        <!--</com.kpbird.chipsedittextlibrary.ChipsMultiAutoCompleteTextview>-->

    </GridLayout>
</ScrollView>
